--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="opret"><u><b>Har du ikke en konto?</b></u></string>
+    <string name="PersData">Jeg accepterer SENSmotion\'s vilkår for håndtering af personfølsomme oplysninger</string>
 </resources>
