--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="opret"><u><b>Har du ikke en konto?</b></u></string>
     <string name="PersData">Jeg accepterer SENSmotion\'s vilkår for håndtering af personfølsomme oplysninger</string>
+    <string name="facebook_app_id">Facebook App ID</string>
 </resources>
